--- a/Lunacy/.project
+++ b/Lunacy/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Lunacy</name>
+	<name>1510_Lunacy_2009</name>
 	<comment></comment>
 	<projects>
 	</projects>
